# fintech_utils

./: .gitignore  LICENSE  README.md  pyproject.toml
fintech_utils/: __init__.py
fintech_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fintech_utils/findata/: __init__.py  options.py  returns.py
fintech_utils/fintech_utils.egg-info/: PKG-INFO  SOURCES.txt
fintech_utils/linalg/: __init__.py  mat.py
fintech_utils/momentum/: __init__.py  calc.py  config.py  data.py  eval.py  monitor.py  option_select.py  risk.py  signal.py
fintech_utils/plots/: __init__.py  ml_plots.py  stats_plots.py
fintech_utils/stats/: __init__.py  eval.py  fit.py  ml.py  var.py
