[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fintech_utils"
version = "0.1.0"
description = "Utility functions extracted from Tests.ipynb"
authors = [{ name = "Sean Guo" }]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["fintech_utils"]