[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fintech_utils"
version = "0.1.1"
description = "Utility functions for Fintech"
authors = [{ name = "Sean Guo" }]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["fintech_utils*"]