[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fintech_utils"
version = "0.1.1"
description = "Utility functions for Fintech"
authors = [{ name = "Sean Guo" }]
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.20",
    "pandas>=1.5",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "statsmodels>=0.13",
    "scikit-learn>=1.0",
    "torch>=1.13",
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fintech_utils*"]
